--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4153,11 +4153,12 @@ label {
 	background: var(--tg-white);
 	border-radius: 20px;
 	padding: 44px 44px 52px;
+	margin-bottom: 80px;
 }
 
 .project-content-three .title {
 	margin-bottom: 12px;
-	font-size: 24px;
+	font-size: 20px;
 }
 
 .project-content-three p {
@@ -4166,6 +4167,8 @@ label {
 	width: 80%;
 	color: var(--tg-black-coral);
 	opacity: 0.7;
+	font-size: 14px;
+	min-height: 40px;
 }
 
 .project-thumb-three {
