--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,4 @@
 @import url('/assets/css/slick.css');
 @import url('/assets/css/default.css');
 @import url('/assets/css/style.css');
+@import url('/assets/css/responsive.css');
