--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,7 @@
 @import url('/assets/css/default.css');
 @import url('/assets/css/style.css');
 @import url('/assets/css/responsive.css');
+
+.link-btn{
+    cursor: pointer;
+}
