update 26 files and delete 4 files

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4203,7 +4203,7 @@ label {
 
 .project-details-btn a:hover {
 	background: var(--tg-secondary-color);
-	color: var(--tg-white);
+	color: var(--tg-black);
 }
 
 .project-top-content {
