--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+
+
 @import url('/assets/css/bootstrap.min.css');
 @import url('/assets/css/animate.min.css');
 @import url('/assets/css/magnific-popup.css');
@@ -9,6 +11,13 @@
 @import url('/assets/css/style.css');
 @import url('/assets/css/responsive.css');
 
+
+
+
 .link-btn{
     cursor: pointer;
+}
+
+.ant-modal-content {
+    height: auto;
 }
