--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-
-
 @import url('/assets/css/bootstrap.min.css');
 @import url('/assets/css/animate.min.css');
 @import url('/assets/css/magnific-popup.css');
@@ -12,12 +10,91 @@
 @import url('/assets/css/responsive.css');
 
 
+html {
+    scroll-behavior: smooth;
+}
 
-
-.link-btn{
+.link-btn {
     cursor: pointer;
 }
 
 .ant-modal-content {
     height: auto;
+}
+
+.team-member-card {
+    width: 350px;
+    height: 400px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
+}
+
+.team-member-card .overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.332), rgba(0, 0, 0, 0.356));
+    z-index: 1;
+    border-radius: 20px;
+    transition: .3s delay;
+}
+
+.team-member-card .overlay:hover {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.429), rgba(0, 0, 0, 0.454));
+}
+
+.team-member-card .overlay .details {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
+}
+
+.team-member-card .overlay .details h3 {
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    padding: 0;
+    margin: 0;
+}
+
+.team-member-card .overlay .details p {
+    font-size: 12px;
+    font-weight: 400;
+    color: white;
+    padding: 0;
+    margin: 0;
+}
+
+.team-member-card .overlay .details .experiance {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.team-member-card .overlay .details .experiance .item {
+    color: whitesmoke;
+    font-size: 9px;
+    padding: 2px 20px;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+}
+
+.team-member-card .overlay .details .experiance .item:hover {
+    color: black;
+    background-color: whitesmoke;
+    border-radius: 10px;
+}
+
+.team-container {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
