--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,3 +98,28 @@ html {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.image {
+    position: relative;
+    overflow: hidden;
+}
+
+.image .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.image .overlay .a {
+    color: white;
+}
+
+.image:hover .overlay {
+    display: flex;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.502), rgba(0, 0, 0, 0.509));
+}
