--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6974,8 +6974,8 @@ label {
 	width: 100%;
 	padding-bottom: 100px;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	gap: 60px;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 40px;
 }
 
 .portfolio-item {
@@ -6987,8 +6987,9 @@ label {
 
 .portfolio-item .image {
 	display: flex;
-	height: 450px;
+	height: 320px;
 	overflow: hidden;
+	object-fit: cover;
 }
 
 
