update 7 files and delete 5 files

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7012,13 +7012,14 @@ label {
 }
 
 .portfolio-details h1 {
-	font-size: 24px;
-	line-height: 32px;
+	font-size: 22px;
+	font-weight: 500;
+	line-height: 25px;
 
 }
 
 .portfolio-details p {
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 24px;
 
 }
