--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @import url('/assets/css/bootstrap.min.css');
 @import url('/assets/css/animate.min.css');
 @import url('/assets/css/magnific-popup.css');
@@ -118,6 +117,7 @@ html {
     align-items: center;
     gap: 10px;
 }
+
 .image .overlay .a {
     color: white;
 }
@@ -129,24 +129,43 @@ html {
 
 .category-btn {
     border: none;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    padding: 5px 20px;
+    border: .0625rem solid #ccc;
+    border-radius: 0.5em;
+    padding: 8px 27px;
     background-color: transparent;
     color: black;
     font-weight: 500;
+    font-size: 14px;
 }
+
 .category-btn-active {
-    border: 2px solid #ff7220e3;
-    border-radius: 5px;
-    padding: 5px 20px;
-    background-color: transparent;
-    color: black;
+    border: .0625rem solid #ff7220e3;
+    background-color: #ff7220e3;
+    border-radius: 0.5em;
+    padding: 8px 27px;
+    /* background-color: transparent; */
+    color: white;
     font-weight: 500;
+    font-size: 14px;
 }
+
 .category-btn-active:hover {
-    border: 2px solid black;
+    /* border: 1px solid #ff7220e3;
+    background-color: transparent; */
+    color: white;
 }
+
 .category-btn:hover {
-    border: 2px solid black;
+    border: .0625rem solid #ff7220e3;
+    color: #ff7220e3;
+}
+
+.btn-search {
+    background-color: #ff7220e3;
+    color: white;
+    border-radius: 0.5em;
+    padding: 8px 27px;
+    font-weight: 500;
+    font-size: 14px;
+    border: none;
 }
