--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4646,6 +4646,7 @@ label {
 	justify-content: center;
 	gap: 10px;
 	margin-top: 65px;
+	/* color: rgb(240, 234, 234); */
 }
 
 .testimonial-active-two .slick-dots li,
@@ -5374,26 +5375,40 @@ label {
 .pricing-item-wrap .nav-tabs {
 	border-bottom: none;
 	display: inline-flex;
-	background: var(--tg-onyx);
-	padding: 11px 14px;
-	border-radius: 10px;
+	background: rgb(255, 255, 255);
+	box-shadow: 0px 8px 22px rgba(0, 0, 0, 0.08);
+	padding: 10px 10px;
+	border-radius: 15px;
 }
 
 .pricing-item-wrap .nav-tabs .nav-link {
 	margin-bottom: 0;
 	background: transparent;
 	border: none;
-	font-size: 16px;
+	font-size: 18px;
 	border-radius: 10px;
-	padding: 10px 27px;
-	color: var(--tg-white);
-	font-weight: 400;
+	padding: 20px 40px;
+	color: var(--tg-black);
+	font-weight: 500;
+	/* animation-delay: 0.5s; */
+	/* animation: 0.5s ease-in-out  alternate forwards running fadeInLeft; */
 }
 
-.pricing-item-wrap .nav-tabs .nav-link.active {
-	box-shadow: 0px 8px 22px rgba(0, 0, 0, 0.08);
-	font-weight: 700;
+.pricing-item-wrap .nav-tabs .nav-link.active1 {
+	box-shadow: 0px 5px 10px rgba(238, 159, 130, 0.697);
+	font-weight: 600;
 	background: var(--tg-primary-color);
+	color: var(--tg-white);
+	animation-delay: 0.5s;
+	animation: 0.7s ease-in-out  alternate forwards running fadeInLeft;
+}
+.pricing-item-wrap .nav-tabs .nav-link.active0 {
+	box-shadow: 0px 5px 10px rgba(238, 159, 130, 0.697);
+	font-weight: 600;
+	background: var(--tg-primary-color);
+	color: var(--tg-white);
+	animation-delay: 0.5s;
+	animation: 0.7s ease-in-out  alternate forwards running fadeInRight;
 }
 
 /*=============================
