--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4153,7 +4153,7 @@ label {
 .project-item-three {
 	background: var(--tg-white);
 	border-radius: 20px;
-	padding: 44px 44px 52px;
+	padding: 44px 44px 32px;
 	margin-bottom: 80px;
 }
 
@@ -6513,7 +6513,7 @@ label {
 
 #contact-map {
 	width: 100%;
-	height: 840px;
+	height: 500px;
 	margin-bottom: 80px;
 }
 
@@ -6525,10 +6525,12 @@ label {
 
 .inner-contact-info .list-wrap {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	flex-direction: column;
+	/* align-items: center; */
+	/* justify-content: space-between; */
 	flex-wrap: wrap;
 	gap: 30px;
+	/* color: ; */
 }
 
 .contact-info-item {
@@ -6765,7 +6767,7 @@ label {
 
 /* footer-two */
 .footer-top-two {
-	padding: 100px 0 85px;
+	padding: 80px 0 20px;
 }
 
 .footer-content-two .logo {
